Add tech demo page for threejs

--- a/docs/docs/examples/tech-demos.mdx
+++ b/docs/docs/examples/tech-demos.mdx
@@ -11,6 +11,13 @@ import { MultiplayerExamples } from "@site/src/components/MultiplayerExamples"
   techDemo={true}
   data={[
     {
+      title: "Three JS",
+      slug: "threejs",
+      description: "TypeScript, ThreeJS",
+      src: require("@site/static/img/tech-demos/threejs.png")
+        .default,
+    },
+    {
       title: "Top Down Synchronization",
       slug: "top-down-synchronization",
       description: "TypeScript, Canvas",
