add tech demo link

--- a/docs/docs/examples/tech-demos.mdx
+++ b/docs/docs/examples/tech-demos.mdx
@@ -31,6 +31,14 @@ import { MultiplayerExamples } from "@site/src/components/MultiplayerExamples"
       src: require("@site/static/img/tech-demos/phaser.png")
         .default,
     },
+    {
+      title: "World Time",
+      slug: "world-time",
+      description: "TypeScript, React",
+      skipBlog: true,
+      src: require("@site/static/img/tech-demos/world-time.png")
+          .default,
+      },
   ]}
 />
 
