--- a/docs/blog/2024-11-05-threejs.md
+++ b/docs/blog/2024-11-05-threejs.md
@@ -1,9 +1,10 @@
+
 ---
-title: ThreeJS Tech Demo
+title: Three.js Tech Demo
 description: Building 3D games on Rune
-slug: threejs
+slug: Three.js
 tags: [Game Development]
-image: /img/blog/social-previews/threejs.png
+image: /img/blog/social-previews/Three.js.png
 authors:
 - name: Kevin Glass 
   title: Founding Engineer at Rune  
@@ -13,83 +14,77 @@ authors:
 ---
 
 <head>
-  <title>ThreeJS Tech Demo</title>
-  <meta property="og:title" content="ThreeJS Tech Demo"/>
+  <title>Three.js Tech Demo</title>
+  <meta property="og:title" content="Three.js Tech Demo"/>
 </head>
 
-At Rune, we love all sorts of games from 2D, to isometric to 3D and we want you to use the tools you love on the platform. With 3D games comes the complexity of camera controls and character controllers can be tricky to feel right even in a single player game. The examples belows are aimed at providing a simple reference point for building 3D games with [ThreeJS](https://threejs.org) on the Rune. platform.
+At Rune, we love all types of games—from 2D to isometric to 3D—and we want you to build with the tools you prefer on our platform. Creating 3D games brings added complexities, like camera controls and character movement, which can be challenging to make feel natural, even in single-player settings. The examples below serve as a straightforward reference for building 3D games with [Three.js](https://threejs.org) on the Rune platform.
 
-![](/img/blog/callouts/threejs.gif)
+![](/img/blog/callouts/Three.js.gif)
 
 ## Approach
 
-Building a 3D game is a little more complicated than building a 2D game, through the multiplayer part is essentially the same in terms of Rune SDK usage. In this tech demo we'll cover the follow parts of building a multiplayer 3D game:
+Building a 3D game is more complex than a 2D game, though the multiplayer components remain essentially the same when using the Rune SDK. In this tech demo, we'll cover key aspects of building a multiplayer 3D game:
 
-* Rendering / Shadows / Lighting
-* Model Loading 
-* Character and Camera Controller
-* Input/Virtual Joystick
-* Multiplayer Support with the Rune SDK
+* Rendering, shadows, and lighting
+* Model loading
+* Character and camera controllers
+* Input and virtual joystick
+* Multiplayer support with the Rune SDK
 
-We'll be using the same approach we've used in previous tech demos where the controls the player inputs are whats provided between the client and logic. The logic will be responsible for all updates to the game world including collisions. Client side we'll make sure our 3D world matches the logic world and interpolate between positions and rotations so that everything feels smooth.
+We’ll follow a similar approach to previous tech demos, where player inputs are exchanged between the client and logic layers. The logic layer manages all updates to the game world, including collisions. On the client side, we ensure our 3D world mirrors the logical world, interpolating between positions and rotations for smooth visuals.
 
-Using the wonderful at from [Kenney.nl](https://kenney.nl) we'll build a small scene in which the players can explore together.
+With fantastic assets from [Kenney.nl](https://kenney.nl), we’ll build a small scene for players to explore together.
 
-## Rendering / Shadows / Lighting
+## Rendering, Shadows, and Lighting
 
 **Setting Up the Renderer**
 
-Below you can see the configuration for a reasonably nice but mobile friendly ThreeJS renderer. In particular we want the following configuration options if possible:
+Below is the configuration for a high-quality yet mobile-friendly Three.js renderer. Key configuration options include:
 
-* Power Preference - indicates to the mobile device to get the best performance out of the graphics chip. This comes at the cost of battery life so if you can render less often then tune this down.
-* Anti-aliasing - Player's really notice jagged lines in 3D rendering so if your end devices can support basic anti-aliasing its really worth the results.
-* Tone Mapping - The depth of colors and shades of colors is changed by the tone mapping used. To my eye (ymmv) the `ACESFilmicToneMapping` gives the nicest thick colours effect.
-* Shadows - Turn shadows on (this will have to be enabled in both meshes and lights separately). Shadows are something that really bring a scene to life but also an easy thing to turn off if your end devices aren't coping with the rendering.
+* **Power Preference** - Maximizes graphics performance on mobile devices, though it can drain battery life more quickly. Adjust this if rendering frequency can be reduced.
+* **Anti-aliasing** - Smooths jagged edges in 3D rendering, significantly improving visual quality.
+* **Tone Mapping** - Adjusts color depth and shading. For vibrant colors, `ACESFilmicToneMapping` offers a rich, deep effect.
+* **Shadows** - Adds realism by enabling shadows, though it can be demanding on low-end devices. Shadows must be enabled separately for both meshes and lights.
 
 ```javascript
-// the main ThreeJS scene we're rendering
+// Main Three.js scene setup
 const scene: Scene = new Scene()
 
-// the Three JS renderer
+// Renderer setup
 const renderer = new WebGLRenderer({
   powerPreference: "high-performance",
   antialias: true,
 })
 
-// tone mapping controls how the color of points in the
-// world is mapped to pixels on the screen. This tone mapping
-// gives the rich look
+// Configure tone mapping and shadow rendering
 renderer.toneMapping = ACESFilmicToneMapping
-
-// enable the shadow map rendering
 renderer.shadowMap.enabled = true
 renderer.shadowMap.type = PCFShadowMap
 
-// add the renderer to the DOM
+// Add renderer to the DOM
 renderer.setSize(window.innerWidth, window.innerHeight)
 document.body.appendChild(renderer.domElement)
 
-// background color with a fog to the distance
+// Set background color and add fog for depth
 const skyBlue = 0x87ceeb
 scene.background = new Color(skyBlue)
 scene.fog = new FogExp2(skyBlue, 0.02)
 
-// render the scene every at the configured FPS
+// Render the scene at configured FPS
 setInterval(() => {
   render()
 }, 1000 / RENDER_FPS)
 ```
 
-We create and configure the renderer which create a DOM element (a canvas to be exact) which we can then add the document so the player can see it. We then configure a 
-background for the scene so the sky is blue and theres a fog into the distance. Fog hides things that aren't rendered in the distance.
+This setup creates a DOM element (canvas) for the renderer and attaches it to the document. We set a sky-blue background with fog to add depth and enhance visual appeal.
 
-Finally we setup a rendering loop, in our case at 30 FPS. We could have of course used `requestAnimationFrame()` but since we want to render at less than the refresh of the
-device (for low end device performance reasons) its easier to use a simple `setInterval`.
+We use a `setInterval` loop at 30 FPS, though `requestAnimationFrame()` could be used for a higher frame rate. To optimize performance on low-end devices, we cap it at 30 FPS.
 
-The render function is where all the updates across the game take place, it looks like this:
+The render function updates game elements as follows:
 
 ```javascript
-// update the different elements of the game
+// Update different game elements
 updateInput()
 const localPlayer = getLocalCharacter3D()
 if (localPlayer) {
@@ -100,27 +95,25 @@ if (localPlayer) {
 }
 updateCharacterPerFrame(1 / RENDER_FPS)
 
-// render the game with ThreeJS
+// Render the game with Three.js
 renderer.render(scene, getCamera())
 ```
 
-The updates of input, camera, lighting and character shown we be discussed later in this article.
+The input, camera, lighting, and character updates shown here will be discussed later in this article.
 
-**Enabled Lights and Shadows**
+**Lights and Shadows**
 
-Along with the renderer we want to light the scene and render shadows. ThreeJS is super powerful in this regard with shadow mapping built right into the core
-renderer. As you can see below for our tech demo we'll add two lights.
+In addition to the renderer, we need to light the scene and enable shadows. Three.js includes built-in shadow mapping, which we configure below.
 
-* Ambient Light - used to make everything visible in the scene but doesn't provide any shading
-* Directional Light - used to light the models from a particular direction and hence provide shading. The directional light is also the source of shadows.
+* **Ambient Light** - Provides basic visibility across the scene but doesn’t add shading.
+* **Directional Light** - Illuminates models from a specific direction, adding shading; it also serves as the source of shadows.
 
 ```javascript
-// base ambient lighting so everything is visible
+// Basic ambient lighting for visibility
 ambientLight = new AmbientLight(0xffffff, 1)
 getScene().add(ambientLight)
 
-// create the moveable directional light that generates
-// the shadow map
+// Create directional light for shadows
 lightGroup = new Object3D()
 directionalLight = new DirectionalLight(0xffffff, 1)
 directionalLight.position.set(-3, 3, 3)
@@ -139,17 +132,11 @@ directionalLight.shadow.camera.top = SHADOW_MAP_BOUNDS
 directionalLight.shadow.camera.bottom = -SHADOW_MAP_BOUNDS
 ```
 
-We've configure the frustrum (the viewpoint) of the shadow generator which describes how far the shadows will extend. Shadow mapping essentially re-renders the screen
-from the perspective the light and generate a texture that can be applied to show shadows. This means it can be quite expensive and with a frustrum too large can result
-in low resolution shadows. 
-
-We also added the directional light to a group, so it can easily be moved along with the player. Why? The shadows are expensive to generate so we only want to render
-shadows for the area local to the player (the bit they see). As the player moves around we'll see we also move that directional light with them, so shadows are always
-rendered need to the player and no-where else.
+We configure the shadow generator’s frustum to control the extent of the shadows. Shadow mapping renders the scene from the light’s perspective, creating a texture to display shadows. By moving the directional light with the player, shadows are rendered only locally, optimizing performance.
 
 ## Model Loading
 
-Model loading in ThreeJS couldn't be easier, and since Kenney provided his models in GLTF format we can simply used the loader built in to ThreeJS. 
+Three.js simplifies model loading, especially when using Kenney’s GLTF models. Here’s a loader function for GLTF models:
 
 ```javascript
 function loadGLTF(url: string): Promise<GLTF> {
@@ -159,7 +146,6 @@ function loadGLTF(url: string): Promise<GLTF> {
     gltfLoader.load(
       url,
       (model) => {
-        // make every model loaded a shadow caster and receiver
         model.scene.traverse((child) => {
           child.castShadow = true
           child.receiveShadow = true
@@ -175,9 +161,7 @@ function loadGLTF(url: string): Promise<GLTF> {
 }
 ```
 
-Note that all the models we're loading we want to be cast shadow and receive them from other models so a quick `model.traverse()` to mark all the meshes appropriately. Now one
-caveat is depending on how you load your models the ThreeJS loader might not be able to find any referenced textures. If thats the case for you, simply the load the textures
-and apply them to the meshes.
+To ensure all models can cast and receive shadows, we traverse each loaded model. If textures aren’t automatically loaded, we apply them manually as shown below.
 
 ```javascript
 export function loadTexture(url: string): Promise<Texture> {
@@ -207,23 +191,15 @@ export function applyTexture(obj: Object3D, texture: Texture) {
 
 ## Character and Camera Controller
 
-One of the hard things to get right with 3D games is the character/camera controller. For our recent release, MeatSuits, we modelled and built a character
-controller based on the ever popular Roblox. In this tech demo we've tried to distill that controller down into the cleanest code.
+Creating a responsive 3D character and camera controller can be challenging. For instance, our recent release, *MeatSuits*, features a controller inspired by Roblox. This demo distills the basics of that controller.
 
-First lets setup a basic perspective camera and some controls to manage the view:
+First, we set up a basic perspective camera:
 
 ```javascript
-// the position the camera is looking at - independent of the
-// player position so we can move it smoothly
 const lookAt: Vector3 = new Vector3(0, 1, 0)
-// The angle we're trying to get to on the camera local Y axis. Independent
-// of the actual value so it can be moved smoothly
 let targetAngleY: number = 0
-// The angle we're trying to get to on the cameral local Z axis. Independent
-// of the actual value so it can be moved smoothly
 let targetAngleZ: number = Math.PI
 
-// The ThreeJS camera
 const camera: PerspectiveCamera = new PerspectiveCamera(
   45,
   window.innerWidth / window.innerHeight,
@@ -232,44 +208,34 @@ const camera: PerspectiveCamera = new PerspectiveCamera(
 )
 ```
 
-Next we have the per frame camera update. We'll interpolate the camera position and target location towards whatever has been configured in `lookAt`, `targetAngleY` and `targetAngleX`
+We then update the camera’s position and target each frame to ensure smooth motion:
 
 ```javascript
 export function updateCamera(targetCharacter: Character3D) {
-  // the offset from the ground the camera maintains
   const cameraHeight = 2
-  // The distance from the target (look at)
   const cameraDistance = 4
-  // The speed that the camera lerps at
   const cameraSoftness = 0.2
-  // The height we're looking at - so we're not looking
-  // at the player's feet
   const cameraTargetHeight = 1
 
-  // work out where the camera "should be" once it's
-  // finished smoothly moving
   const { x, y, z } = targetCharacter.model.position
 
   const targetPosition = new Vector3(cameraDistance, 0, 0)
   targetPosition.applyEuler(new Euler(0, -targetAngleY, -targetAngleZ))
   targetPosition.add(new Vector3(x, y + cameraHeight, z))
 
-  // interpolate the camera's position to the place we want it to be
   camera.position.lerp(targetPosition, cameraSoftness)
-  // interpolate the cameras's target to the player
   lookAt.lerp(new Vector3(x, y + cameraTargetHeight, z), cameraSoftness)
   camera.lookAt(lookAt)
 }
 ```
 
-Very simple right? The real trick with the Roblox style controller is that movement of the joystick is interpreted based on the camera's current viewpoint. So pushing up on the joystick
-always goes into the view, pushing left always goes left in the camera's view. 
+It’s simple, right? The real trick with the Roblox-style controller is that joystick movement is interpreted based on the camera’s current viewpoint. So pushing up on the joystick always moves forward in the view, and pushing left always moves left relative to the camera.
 
-But wait, if that's the case then how do we ever turn a corner? As we'll see in the input section below theres a soft tweak to the rules applied on the client side.
+But how do we turn corners, then? As we’ll see in the input section below, there’s a subtle tweak to the rules applied on the client side.
 
-## Input/Virtual Joystick
+## Input and Virtual Joystick
 
-While when playing the demo you'd think there are only a couple of inputs there are actually quite a few parts that make the controller feel 'right'. First is the camera view adjustment - for the player this means being able to drag the view by using a second finger (i.e. not the joystick control). This for us is configured in the renderer code:
+While the demo may seem to use only a couple of inputs, there are actually several elements that make the controller feel "right." First is the camera view adjustment—this allows players to drag the view using a second finger (separate from joystick control). For us, this is configured in the renderer code:
 
 ```javascript
 renderer.domElement.addEventListener("touchstart", (e) => {
@@ -293,9 +259,9 @@ renderer.domElement.addEventListener("touchmove", (e) => {
 })
 ```
 
-Pretty simple right? If we drag a finger on the background of the renderer then adjust the camera rotation.
+Pretty simple, right? Dragging a finger on the renderer’s background adjusts the camera rotation.
 
-Next we have the "real" input through the joystick and jump button, get the joystick state (and obey key pressed if testing on the web):
+Next, we handle the "real" input through the joystick and jump button, retrieving the joystick state (and following key presses if testing on the web):
 
 ```javascript
 const joystickState = getJoystickState()
@@ -321,9 +287,9 @@ if (isKeyDown("s") || joystickState.y < -DEAD_ZONE) {
 }
 ```
 
-Note that we're also recording the current `cameraAngle` as part of the controls. This is so the movement code in the logic (see below) knows how to interpret the inputs. 
+Note that we’re also recording the current `cameraAngle` as part of the controls. This allows the movement code in the logic (see below) to interpret the inputs accurately.
 
-Next we have the small tweak that allows us to turn corners. When moving left or right we move perpendicular to the camera angle, however we also gently turn the camera along with it:
+Next, we add a small tweak that lets us turn corners. When moving left or right, we move perpendicular to the camera angle, but we also gently turn the camera along with the movement:
 
 ```javascript
 // if the controls indicate left/right motion then rotate the camera
@@ -336,9 +302,9 @@ if (currentControls.x > 0) {
 }
 ```
 
-This means if the player is running left/right the camera tries to turn to follow them. If they keep running left/right, since the direction of movement is relative to the camera angle, they'll end up running in a circle. 
+This means that if the player is running left or right, the camera tries to turn to follow them. If they keep moving in those directions, they’ll eventually run in a circle since movement is relative to the camera angle.
 
-Once we have the controls for this frame we need to consider updating the logic with them. Rune prevents the network getting flooding my allowing 10 updates per second, so we don't want to send too often or if the control input hasn't changed:
+Once we have the controls for this frame, we need to update the logic accordingly. Rune prevents network flooding by allowing only 10 updates per second, so we avoid sending updates too frequently or when control inputs haven’t changed:
 
 ```javascript
 // only send the control update if something has changed
@@ -370,13 +336,13 @@ if (
 }
 ```
 
-Note however if we stop moving or we jump we want to send that input as soon as possible - this is so the player feels more like they have direct control of their player. Any delay in stopping will have the player feeling "the lag".
+However, if we stop moving or jump, we want to send that input immediately—this ensures the player feels direct control over their character. Any delay in stopping would make the player feel "lag."
 
-Now we have input, models, a renderer, lighting and shadows! We just need to make the demo multiplayer.
+Now we have input, models, a renderer, lighting, and shadows! All that’s left is to make the demo multiplayer.
 
 ## Multiplayer Support
 
-Lets take a look at the client code first, as we've seen in previous tech demos theres a callback that Rune uses to tell us about game state updates `onChange`:
+Let’s start by looking at the client code. As we’ve seen in previous tech demos, there’s a callback that Rune uses to notify us of game state updates: `onChange`:
 
 ```javascript
 Rune.initClient({
@@ -406,14 +372,14 @@ Rune.initClient({
 })
 ```
 
-That's all of our `onChange` code. We simply apply the follow code:
+That’s all of our `onChange` code. Here’s how we apply it:
 
-* Build the game map if we haven't already (see below)
-* Make sure any characters the logic has told us about have a 3D model in our world
-* Update any models in our world from the logic state
-* Make sure any models that are in our world, that don't exist in the logic, are removed.
+* Build the game map if we haven’t already (see below)
+* Ensure any characters defined in the logic have a 3D model in our world
+* Update any models in our world based on the logic state
+* Remove any models in our world that don’t exist in the logic
 
-In the logic side we have a bit more to think about. Our game state is very light containing our player's input, the game world and the character running around in it:
+On the logic side, we have a bit more to consider. Our game state is lightweight, containing the player’s input, the game world, and the character moving within it:
 
 ```javascript
 // the game state we store for the running game
@@ -427,7 +393,7 @@ export interface GameState {
 }
 ```
 
-When we startup we add a character to the world for any player:
+When we start up, we add a character to the world for each player:
 
 ```javascript
 setup: (allPlayerIds) => {
@@ -445,7 +411,7 @@ setup: (allPlayerIds) => {
 },
 ```
 
-Likewise when players join or leave we simply update the characters in the world:
+Similarly, when players join or leave, we simply update the characters in the world:
 
 ```javascript
 events: {
@@ -460,7 +426,7 @@ events: {
 },
 ```
 
-In the logic's `update()` loop we move the characters around the world based on their inputs. The key part here is that the player's inputs are interpreted based on the angle of their camera:
+In the logic's `update()` loop, we move the characters around the world based on their inputs. The key detail here is that the player's inputs are interpreted relative to their camera angle:
 
 ```javascript
 // if the player is trying to move then apply the movement assuming its not blocked
@@ -490,7 +456,7 @@ if (controls && (controls.x !== 0 || controls.y !== 0) && character) {
 }
 ```
 
-We'll look at the height of the map calculations below in the map section, the important part here is that `getNewPositionAndAngle()` function which takes the player's input and determines the new position and angle based on the same player's camera angle:
+We’ll cover the map height calculations in the next section, but the key function here is `getNewPositionAndAngle()`. This function takes the player’s input and determines the new position and angle relative to the player’s camera angle:
 
 ```javascript
 export function getNewPositionAndAngle(
@@ -523,12 +489,12 @@ export function getNewPositionAndAngle(
 }
 ```
 
-This means that the player's controls are always relative to where their camera is looking, which leads to that Roblox like character controller we wanted.
+This ensures that the player's controls are always relative to their camera’s direction, achieving the Roblox-style character controller we wanted.
 
 ## Rendering the Map
 
-What would the world be without a map to explore? Our map in this tech demo is simple a grid of heights that generate blocks in the world for the player's to explore. Our game 
-map definition is as follows:
+What would the world be without a map to explore? In this tech demo, our map is a simple grid of heights that generates blocks for players to explore. Our game map definition is as follows:
+
 
 ```javascript
 // wrapper for the content of each tile - useful
@@ -539,7 +505,7 @@ export type GameMapElement = number
 export type GameMap = GameMapElement[]
 ```
 
-Since the map is just an array of 1x1 blocks determining the height at any given location becomes very performant: 
+Since the map is simply an array of 1x1 blocks, determining the height at any given location is highly efficient:
 
 ```javascript
 export function getHeightAt(map: GameMap, x: number, z: number) {
@@ -549,15 +515,14 @@ export function getHeightAt(map: GameMap, x: number, z: number) {
 }
 ```
 
-This is useful since we're going to use a fairly brute force collision detection on the server. We work out the height at a player's position by sampling around
-the player and picking the maximum. Each time the player attempts to move we calculate the height at the new location and compare it to the player's current height:
+This approach is useful because we’re using a fairly brute-force collision detection on the server. We determine the height at a player’s position by sampling around the player and selecting the maximum height. Each time the player attempts to move, we calculate the height at the new location and compare it to the player’s current height:
 
-* If it's lower, then the player needs fall
-* If its the same then nothing to change on the y-axis
-* If its bigger but by a small amount the player should step up onto the block
-* If its bigger byt by a large amount the player can't be moved to that location
+* If it’s lower, the player needs to fall.
+* If it’s the same, there’s no change on the y-axis.
+* If it’s slightly higher, the player should step up onto the block.
+* If it’s significantly higher, the player can’t move to that location.
 
-You can see this code in logic's `update()` function calling our sampling function `findHeightAt` that looks like this:
+You can see this logic in the `update()` function, which calls our sampling function `findHeightAt`, as shown below:
 
 ```javascript
 function findHeightAt(game: GameState, x: number, z: number) {
@@ -585,8 +550,7 @@ function findHeightAt(game: GameState, x: number, z: number) {
 }
 ```
 
-Finally we want to actually visualize the game map in the 3D world for our player's to explore. Since the game map is in the game state it's also available to the
-client so at the start of the tech demo we do a `buildGameMap()`:
+Finally, we want to visualize the game map in the 3D world for players to explore. Since the game map is part of the game state, it’s also accessible to the client. At the start of the tech demo, we call `buildGameMap()`:
 
 ```javascript
 export function buildGameMap(map: GameMap): void {
@@ -612,13 +576,12 @@ export function buildGameMap(map: GameMap): void {
 }
 ```
 
-As you can see we cycle through the locations that have a height defined and create a textured box to represent that height. This leaves our player's with a bare
-bones world to navigate.
+As you can see, we cycle through the locations with a defined height and create a textured box to represent each height level. This provides players with a bare-bones world to navigate.
 
-With ThreeJS making a 3D game is an approachable task for any web developer. Making it multiplayer with the Rune SDK is also something that developers should find a straight forward task. Hopefully the code in this tech will cover the majority of cases where a game needs a nicely rendered 3D world and familiar controls as a base for something really wonderful! 
+With Three.js, building a 3D game is accessible for any web developer. Adding multiplayer with the Rune SDK is also straightforward. Hopefully, the code in this tech demo covers most cases where a game needs a well-rendered 3D world and familiar controls as a foundation for something exciting!
 
-Look forward to seeing what 3D games you build on Rune next!
+Looking forward to seeing the 3D games you build on Rune!
 
-Want to know more? Why not drop by the [Discord](https://discord.gg/rune-devs) and have a chat?
+Want to learn more? Join us on [Discord](https://discord.gg/rune-devs) for a chat!
 
 
