Add threejs demo

--- a/docs/blog/2024-11-05-threejs.md
+++ b/docs/blog/2024-11-05-threejs.md
@@ -20,7 +20,7 @@ authors:
 
 At Rune, we love all types of games—from 2D to isometric to 3D—and we want you to build with the tools you prefer on our platform. Creating 3D games brings added complexities, like camera controls and character movement, which can be challenging to make feel natural, even in single-player settings. The examples below serve as a straightforward reference for building 3D games with [Three.js](https://threejs.org) on the Rune platform.
 
-![](/img/blog/callouts/Three.js.gif)
+![](/img/blog/callouts/threejs.gif)
 
 ## Approach
 
