Reduce complexity in text for tech demo

--- a/docs/blog/2024-11-13-threejs.md
+++ b/docs/blog/2024-11-13-threejs.md
@@ -4,7 +4,7 @@ title: Three.js Tech Demo
 description: Building 3D games on Rune
 slug: Three.js
 tags: [Game Development]
-image: /img/blog/social-previews/Three.js.png
+image: /img/blog/social-previews/three.js.png
 authors:
 - name: Kevin Glass 
   title: Founding Engineer at Rune  
@@ -18,13 +18,13 @@ authors:
   <meta property="og:title" content="Three.js Tech Demo"/>
 </head>
 
-At Rune, we love all types of games—from 2D to isometric to 3D—and we want you to build with the tools you prefer on our platform. Creating 3D games brings added complexities, like camera controls and character movement, which can be challenging to make feel natural, even in single-player settings. The examples below serve as a straightforward reference for building 3D games with [Three.js](https://threejs.org) on the Rune platform.
+At Rune, we love all types of games—from 2D to isometric to 3D—and we want you to build with the tools you prefer on our platform. Creating 3D games introduces some extra pieces, like camera controls and character movement, which takes time to make feel natural, even in single-player settings. The examples below serve as a straightforward reference for building 3D games with [Three.js](https://threejs.org) on the Rune platform.
 
 ![](/img/blog/callouts/threejs.gif)
 
 ## Approach
 
-Building a 3D game is more complex than a 2D game, though the multiplayer components remain essentially the same when using the Rune SDK. In this tech demo, we'll cover key aspects of building a multiplayer 3D game:
+Building a 3D game is more time consuming than a 2D game, though the multiplayer components remain essentially the same when using the Rune SDK. In this tech demo, we'll cover key aspects of building a multiplayer 3D game:
 
 * Rendering, shadows, and lighting
 * Model loading
@@ -191,7 +191,7 @@ export function applyTexture(obj: Object3D, texture: Texture) {
 
 ## Character and Camera Controller
 
-Creating a responsive 3D character and camera controller can be challenging. For instance, our recent release, *MeatSuits*, features a controller inspired by Roblox. This demo distills the basics of that controller.
+Creating a responsive 3D character and camera controller can be an intricate task. For instance, our recent release, *MeatSuits*, features a controller inspired by Roblox. This demo distills the basics of that controller.
 
 First, we set up a basic perspective camera:
 
@@ -287,7 +287,7 @@ if (isKeyDown("s") || joystickState.y < -DEAD_ZONE) {
 }
 ```
 
-Note that we’re also recording the current `cameraAngle` as part of the controls. This allows the movement code in the logic (see below) to interpret the inputs accurately.
+Note that we’re also recording the current `cameraAngle` as part of the controls. This allows the movement code in the logic (see below) to interpret the inputs correctly.
 
 Next, we add a small tweak that lets us turn corners. When moving left or right, we move perpendicular to the camera angle, but we also gently turn the camera along with the movement:
 
@@ -336,7 +336,7 @@ if (
 }
 ```
 
-However, if we stop moving or jump, we want to send that input immediately—this ensures the player feels direct control over their character. Any delay in stopping would make the player feel "lag."
+However, if we stop moving or jump, we want to send that input immediately—this ensures the player feels direct control over their character. Any delay in stopping would make the player feel "lag".
 
 Now we have input, models, a renderer, lighting, and shadows! All that’s left is to make the demo multiplayer.
 
