Add a link to the actual demo

--- a/docs/blog/2024-11-13-threejs.md
+++ b/docs/blog/2024-11-13-threejs.md
@@ -21,6 +21,8 @@ At Rune, we love all types of games—from 2D to isometric to 3D—and we want y
 
 ![](/img/blog/callouts/threejs.gif)
 
+You can give the demo a play in the [tech demos section](https://developers.rune.ai/tech-demos/threejs/) of the docs.
+
 ## Approach
 
 Building a 3D game is more time consuming than a 2D game, though the multiplayer components remain essentially the same when using the Rune SDK. In this tech demo, we'll cover key aspects of building a multiplayer 3D game:
